<resources>
    <string name="app_name">Katering\nConnect</string>
    <string name="title_beranda">Beranda</string>
    <string name="title_riwayat">Riwayat</string>
    <string name="title_akun">Akun</string>
    <string name="katering">Katering</string>
    <string name="tv_email">Email</string>
    <string name="tv_password">Password</string>
    <string name="login">Masuk</string>
    <string name="tv_notRegistered">Belum punya akun ?</string>
    <string name="tv_jenis_akun">Jenis Akun</string>
    <string name="akun_pembeli">Akun Pembeli</string>
    <string name="akun_vendor">Akun Vendor</string>
    <string name="tv_name">Nama</string>
    <string name="tv_city">Kota</string>
    <string name="tv_address">Alamat</string>
    <string name="tv_no_phone">No. Telp</string>
    <string name="register">Daftar</string>
    <string name="tv_Registered">Sudah punya akun ?</string>
    <string name="connect">Connect</string>
    <string name="title_akun_anda">Profil Anda</string>
    <string name="edit_akun">Ubah Profil</string>
    <string-array name="Cities">
        <item>Surabaya</item>
        <item>Malang</item>
        <item>Medan</item>
        <item>Makassar</item>
        <item>Palembang</item>
        <item>Bandar Lampung</item>
        <item>Bekasi</item>
        <item>Depok</item>
        <item>Tangerang</item>
        <item>Semarang</item>
        <item>Batam</item>
        <item>Bogor</item>
        <item>Pekanbaru</item>
        <item>Samarinda</item>
        <item>Tasikmalaya</item>
        <item>Serang</item>
        <item>Pontianak</item>
        <item>Banjarmasin</item>
        <item>Denpasar</item>
        <item>Jambi</item>
        <item>Surakarta</item>
        <item>Cimahi</item>
        <item>Cilegon</item>
        <item>Manado</item>
        <item>Mataram</item>
        <item>Kupang</item>
        <item>Jayapura</item>
        <item>Bengkulu</item>
        <item>Palu</item>
        <item>Sukabumi</item>
        <item>Ambon</item>
        <item>Cirebon</item>
        <item>Kendari</item>
        <item>Dumai</item>
        <item>Pekalongan</item>
        <item>Binjai</item>
        <item>Palangkaraya</item>
        <item>Kediri</item>
        <item>Tegal</item>
        <item>Sorong</item>
        <item>Pematangsiantar</item>
        <item>Banjarbaru</item>
        <item>Banda Aceh</item>
        <item>Tarakan</item>
        <item>Singkawang</item>
        <item>Probolinggo</item>
        <item>Lubuklinggau</item>
        <item>Pangkalpinang</item>
        <item>Tanjungpinang</item>
        <item>Padang Sidempuan</item>
        <item>Batu</item>
        <item>Bitung</item>
        <item>Pasuruan</item>
        <item>Prabumulih</item>
        <item>Banjar</item>
        <item>Ternate</item>
        <item>Gorontalo</item>
        <item>Madiun</item>
        <item>Salatiga</item>
        <item>Lhokseumawe</item>
        <item>Bontang</item>
        <item>Tanjungbalai</item>
        <item>Langsa</item>
        <item>Tebing Tinggi</item>
        <item>Metro</item>
        <item>Palopo</item>
        <item>Bima</item>
        <item>Baubau</item>
        <item>Parepare</item>
        <item>Blitar</item>
        <item>Pagar Alam</item>
        <item>Semarang</item>
        <item>Payukumbuh</item>
        <item>Mojokerto</item>
        <item>Bukit Tinggi</item>
        <item>Gunungsitoli</item>
        <item>Magelang</item>
        <item>Kotamobagu</item>
        <item>Kepulauan Tidore</item>
        <item>Subulussalam</item>
        <item>Tomohon</item>
        <item>Pariaman</item>
        <item>Sungaipenuh</item>
        <item>Sibolga</item>
        <item>Tual</item>
        <item>Solok</item>
        <item>Sawahlunto</item>
        <item>Padang Panjang</item>
        <item>Sabang</item>
        <item>Padang</item>
        <item>Jakarta</item>
        <item>Bandung</item>
        <item>Yogyakarta</item>
        <item>Balikpapan</item>
        <item>Sidoarjo</item>
        <item>Gresik</item>
        <item>Bojonegoro</item>
        <item>Jember</item>
        <item>Nganjuk</item>
        <item>Trenggalek</item>
        <item>Tuban</item>
        <item>Ponorogo</item>
        <item>Banyuwangi</item>
        <item>Lumajang</item>
        <item>Lamongan</item>
    </string-array>
    <string name="title_activity_vendor_main">VendorMainActivity</string>
    <string name="title_vendor_beranda">Pesanan Masuk</string>
    <string name="menu">Menu</string>
    <string name="galeri">Galeri</string>
    <string name="title_edit_akun">Edit Profil</string>
    <string name="simpan">Simpan</string>
    <string name="title_tambah_hidangan_baru">Tambah Hidangan Baru</string>
    <string name="tv_desc">Deskripsi</string>
    <string name="hapus">Hapus</string>
    <string name="title_tambah_galeri">Tambah Galeri Dapur</string>
    <string name="edit_foto">Ubah foto</string>
    <string name="put_foto">Pasang foto</string>
    <string name="from_galeri">Ambil dari galeri</string>
    <string name="from_camera">Ambil dari kamera</string>
    <string name="pesan">Pesan</string>
    <string name="tv_metode_pembayaran">Metode Pembayaran</string>
    <string name="tunai">Tunai</string>
    <string name="bank_bca">Bank BCA</string>
    <string name="bank_bri">Bank BRI</string>
    <string name="tv_user_info">Informasi Anda</string>
    <string name="rincian_pesanan">Rincian Pesanan</string>
    <string name="rincian_pesananmu">Rincian Pesananmu</string>
    <string name="tv_id">ID Pesanan</string>
    <string name="tv_total">Total</string>
    <string name="tv_pembayaran">Pembayaran</string>
    <string name="tv_tanggal">Tanggal</string>
    <string name="tv_jam">Jam</string>
    <string name="selesaikan">Selesaikan</string>
    <string name="beri_nilai">Beri Nilai</string>
    <string name="kirim">Kirim</string>
    <string name="nilai_pesananmu">Nilai Pesananmu</string>
    <string name="splash">splash</string>
    <string name="already_exists_email">Email Sudah Ada</string>
    <string name="wrong_email_pass">Email atau Password Salah</string>
    <string name="can_not_blank">Tidak Boleh Ada Yang Kosong</string>
    <string name="tidak_boleh_kosong">Tidak Boleh Kosong</string>
    <string name="add_photo_alert">Tambahkan Foto Terlebih Dahulu</string>
    <string name="add_ktp_photo_alert">Tambahkan Foto KTP Terlebih Dahulu</string>
    <string name="need_edit_alert">Perbaiki foto terlebih dahulu</string>
    <string name="add_selfie_ktp_photo_alert">Tambahkan Foto Selfie KTP Terlebih Dahulu</string>
    <string name="keluar">Keluar</string>
    <string name="pembeli">Pembeli</string>
    <string name="vendor">Vendor</string>
    <string name="admin">Admin</string>
    <string name="user">User</string>
    <string name="entry_email">Masukkan Email</string>
    <string name="not_valid_email">Alamat Email Tidak Valid</string>
    <string name="entry_password">Masukkan Password</string>
    <string name="entry_name">Masukkan Nama</string>
    <string name="entry_city">Masukkan Kota</string>
    <string name="entry_kategori">Masukkan Kategori</string>
    <string name="entry_price">Masukkan Harga</string>
    <string name="entry_address">Masukkan Alamat</string>
    <string name="entry_no_phone">Masukkan Nomor Telepon</string>
    <string name="minimum_character">Minimal 8 Karakter</string>
    <string name="success_upload_photo">Berhasil Mengubah Foto</string>
    <string name="fail_upload_photo">Gagal Mengubah Foto</string>
    <string name="fail_upload_bukti_transfer">Gagal Mengirim Bukti Transfer</string>
    <string name="success_upload_menu">Berhasil Menambahkan Menu</string>
    <string name="fail_upload_menu">Gagal Menambahkan Menu</string>
    <string name="success_upload_gallery">Berhasil Menambahkan Foto</string>
    <string name="fail_upload_gallery">Gagal Menambahkan Foto</string>
    <string name="success_selesaikan_pesanan">Berhasil Menyelesaikan Pesanan</string>
    <string name="fail_selesaikan_pesanan">Gagal Menyelesaikan Pesanan</string>
    <string name="tidak">Tidak</string>
    <string name="ya">Ya</string>
    <string name="logout_alert">Apakah Anda yakin ingin keluar?</string>
    <string name="potongan_alert">Perlu diketahui bahwa setiap pesanan akan dikenakan potongan sebesar %1$s%%. \n\nApakah Anda bersedia melanjutkan registrasi dengan ketentuan ini?</string>
    <string name="success_delete_photo">Foto berhasil dihapus</string>
    <string name="delete_photo_alert">Apakah Anda yakin ingin \n menghapus foto ini?</string>
    <string name="hapus_foto">Hapus Foto</string>
    <string name="pilih_waktu">Pilih waktu</string>
    <string name="pilih_tanggal">Pilih tanggal</string>
    <string name="fail_pemesanan">Gagal Melakukan Pemesanan</string>
    <string name="fail_topup">Gagal Melakukan Top Up</string>
    <string name="fail_penambahan">Gagal Melakukan Penambahan Porsi</string>
    <string name="pemesanan_berhasil">Pesanan Berhasil Ditambahkan</string>
    <string name="status_butuh_konfirmasi_vendor">Butuh Konfirmasi Vendor</string>
    <string name="status_butuh_konfirmasi_pengguna">Butuh Konfirmasi Pengguna</string>
    <string name="butuh_konfirmasi">Butuh Konfirmasi</string>
    <string name="menunggu_konfirmasi">Menunggu Konfirmasi</string>
    <string name="status_proses">Proses</string>
    <string name="status_selesai">Selesai</string>
    <string name="status_batal">Batal</string>
    <string name="status_ditolak">Ditolak</string>
    <string name="status_gagal">Gagal</string>
    <string name="menolak">Menolak</string>
    <string name="data_kosong">Data Kosong</string>
    <string name="tv_status">Status</string>
    <string name="tv_address_city">%1$s, %2$s</string>
    <string name="tanggal_jam">%1$s - %2$s</string>
    <string name="terima_sebelum_tanggal">Terima pesanan sebelum %1$s - %2$s</string>
    <string name="selesaikan_sebelum_tanggal">Selesaikan pesanan sebelum %1$s - %2$s</string>
    <string name="minimum_date">Hanya bisa memilih tanggal setelah hari ini. Pilih tanggal yang lain ya.</string>
    <string name="batalkan">Batalkan</string>
    <string name="ok">OK</string>
    <string name="fail_set_rating">Gagal Memberikan Penilaian</string>
    <string name="fail_batalkan_pesanan">Gagal Membatalkan Pesanan</string>
    <string name="success_batalkan_pesanan">Berhasil Membatalkan Pesanan</string>
    <string name="fail_tolak_pesanan">Gagal Menolak Pesanan</string>
    <string name="success_tolak_pesanan">Berhasil Menolak Pesanan</string>
    <string name="fail_tolak_pendaftaran">Gagal Menolak Pendaftaran</string>
    <string name="success_tolak_pendaftaran">Berhasil Menolak Pendaftaran</string>
    <string name="tidak_ada_penilaian">Tidak ada penilaian</string>
    <string name="vendor_star">%1$s (%2$s)</string>
    <string name="jumlah_penilaian">%1$s penilaian</string>
    <string name="menu_dipesan">Yang dipesan: %1$s</string>
    <string name="menu_jumlah">%1$s x%2$s</string>
    <string name="nilai_dan_ulasan">Nilai dan Ulasan</string>
    <string name="chat">Chat</string>
    <string name="tv_nama_kategori">Nama Kategori</string>
    <string name="tv_tambah_opsi">Tambah Opsi</string>
    <string name="tv_nama_wajib">Nama *</string>
    <string name="hint_opsi">misal: Soup Kimlo, Daging Lada Hitam</string>
    <string name="hint_harga">+Rp</string>
    <string name="tv_harga_opsi">Harga</string>
    <string name="title_edit_kategori">Edit Kategori</string>
    <string name="hapus_kategori">Hapus Kategori</string>
    <string name="hapus_opsi">Hapus Opsi</string>
    <string name="tambah_porsi">Tambah Porsi</string>
    <string name="int_null">0</string>
    <string name="tambahan_biaya">Tambahan Biaya</string>
    <string name="masukkan_jumlah_pesanan">Masukkan Jumlah Pesanan</string>
    <string name="jumlah_porsi">Jumlah Porsi</string>
    <string name="gambar">Gambar</string>
    <string name="transfer_dana">Transfer Dana</string>
    <string name="verifikasi">Verifikasi</string>
</resources>