<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_user_beranda">

    <fragment
        android:id="@+id/navigation_user_beranda"
        android:name="com.valdoang.kateringconnect.view.user.main.ui.beranda.UserBerandaFragment"
        android:label="@string/title_beranda"
        tools:layout="@layout/fragment_user_beranda" />

    <fragment
        android:id="@+id/navigation_user_riwayat"
        android:name="com.valdoang.kateringconnect.view.user.main.ui.riwayat.UserRiwayatFragment"
        android:label="@string/title_riwayat"
        tools:layout="@layout/fragment_user_riwayat" />

    <fragment
        android:id="@+id/navigation_user_akun"
        android:name="com.valdoang.kateringconnect.view.user.main.ui.akun.UserAkunFragment"
        android:label="@string/title_akun"
        tools:layout="@layout/fragment_user_akun" />
</navigation>