<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_vendor_beranda">

    <fragment
        android:id="@+id/navigation_vendor_beranda"
        android:name="com.dicoding.kateringconnect.view.vendor.main.ui.beranda.VendorBerandaFragment"
        android:label="@string/title_beranda"
        tools:layout="@layout/fragment_vendor_beranda" />

    <fragment
        android:id="@+id/navigation_vendor_riwayat"
        android:name="com.dicoding.kateringconnect.view.vendor.main.ui.riwayat.VendorRiwayatFragment"
        android:label="@string/title_riwayat"
        tools:layout="@layout/fragment_vendor_riwayat" />

    <fragment
        android:id="@+id/navigation_vendor_akun"
        android:name="com.dicoding.kateringconnect.view.vendor.main.ui.akun.VendorAkunFragment"
        android:label="@string/title_akun"
        tools:layout="@layout/fragment_vendor_akun" />
</navigation>