<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_rounded">

    <TextView
        android:id="@+id/title_tambah_porsi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/tambah_porsi"
        android:fontFamily="@font/poppins_bold"
        android:textColor="@color/black"
        android:layout_marginStart="85dp"
        android:layout_marginEnd="85dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/ib_close"
        android:contentDescription="@string/gambar"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:src="@drawable/ic_baseline_close_30"
        android:background="@color/white"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/title_jumlah_porsi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jumlah_porsi"
        android:fontFamily="@font/poppins_bold"
        android:textColor="@color/black"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_tambah_porsi"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/jumlahEditTextLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxCornerRadiusBottomEnd="10dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_jumlah_porsi">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_jumlah"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/masukkan_jumlah_pesanan"
            android:inputType="number"
            tools:ignore="SpeakableTextPresentCheck"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/title_metode_pembayaran"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_metode_pembayaran"
        android:fontFamily="@font/poppins_bold"
        android:textColor="@color/black"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/jumlahEditTextLayout"/>


    <ImageView
        android:id="@+id/iv_tunai"
        android:contentDescription="@string/gambar"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/money_512"
        android:layout_marginTop="18dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/title_metode_pembayaran"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/white_200"
        app:layout_constraintTop_toBottomOf="@id/iv_tunai"
        app:layout_constraintBottom_toTopOf="@id/iv_kc_wallet"/>

    <ImageView
        android:id="@+id/iv_kc_wallet"
        android:contentDescription="@string/gambar"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/wallet_512"
        android:layout_marginBottom="13dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toTopOf="@id/view_metode_pembayaran_2"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/rg_metode_pembayaran"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintTop_toBottomOf="@id/title_metode_pembayaran"
        app:layout_constraintStart_toEndOf="@id/iv_tunai"
        app:layout_constraintEnd_toEndOf="parent">

        <RadioButton
            android:id="@+id/tunai"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="rtl"
            android:textAlignment="textStart"
            android:layout_gravity="start"
            android:text="@string/tunai"
            android:fontFamily="@font/poppins"
            android:textSize="14sp"
            android:layout_marginStart="16dp"/>

        <RadioButton
            android:id="@+id/kc_wallet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="rtl"
            android:textAlignment="textStart"
            android:layout_gravity="start"
            tools:text="Rp100.000"
            android:fontFamily="@font/poppins"
            android:textSize="14sp"
            android:layout_marginStart="16dp"/>

    </RadioGroup>

    <View
        android:id="@+id/view_metode_pembayaran_2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/white_200"
        app:layout_constraintTop_toBottomOf="@id/rg_metode_pembayaran" />

    <View
        android:id="@+id/view_pembayaran"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/white_200"
        android:layout_marginTop="72dp"
        app:layout_constraintTop_toBottomOf="@id/view_metode_pembayaran_2" />

    <TextView
        android:id="@+id/tv_pembayaran"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tambahan_biaya"
        android:fontFamily="@font/poppins"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/view_pembayaran"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_total_pembayaran"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/int_null"
        android:fontFamily="@font/poppins_bold"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_pembayaran"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_pesan"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/poppins_bold"
        android:enabled="false"
        android:text="@string/pesan"
        android:textSize="16sp"
        app:cornerRadius="10dp"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_pembayaran"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>